codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__slash_commands__selection_copy_is_exact_shows_footer_feedback_and_preserves_lease_on_failure.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                "
"                                                "
"› Ask Codex to do anything                      "
"                                                "
"  Copied selection                              "
