codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__slash_commands__transcript_copy_failure.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "render_bottom_popup(&chat, 80)"
---
› Ask Codex to do anything

  Copy failed: clipboard unavailable
