codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__slash_commands__unconfirmed_copy.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 2404
expression: rendered
---
• Copy unconfirmed; /export saves chat
